--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Čeští a slovenští prezidenti</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
+      table{border-collapse: collapse;}
       table.presidents {width: 100%;}
       .presidents th, .presidents td {border: 1px solid gray; padding: 5px;}
       .presidents th {font-weight: 700; text-align: center;}
@@ -24,19 +25,52 @@
         <tr>
           <th>Od</th>
           <th>Do</th>
-          <th>Česko</th>
-          <th>Slovensko</th>
+          <th class="cr">Česko</th>
+          <th class="sr">Slovensko</th>
           <th>Poznámka</th>
         </tr>
       </thead>
       <tbody class="komuniste">
-
+        <tr>
+          <th>1975</th>
+          <th>1989</th>
+          <th colspan="2">Gustav Husák</th>
+          <th></th>
+        </tr>
       </tbody>
       <tbody class="spolecne">
+        <tr>
+          <th>1989</th>
+          <th>1990</th>
+          <th colspan="2" rowspan="2">Václav Havel</th>
+          <th>Zvolen federálním schromážděním (s převahou poslanců KSČ)</th>
+        </tr>
+        <tr>
+          <th>1990</th>
+          <th>1992</th>
+          <th>31. prosince 1992 zaniká Česko-Slovenská Federativní Republika</th>
 
+        </tr>
       </tbody>
       <tbody>
-
+        <tr>
+          <th>1993</th>
+          <th>1998</th>
+          <th rowspan="3">Václav Havel</th>
+          <th>Michal Kováč</th>
+        </tr>
+        <tr>
+          <th>1998</th>
+          <th>1999</th>
+          <th>bez prezidenta</th>
+          <th>Na Slovensku v této době byli pověřeni prezidentskými pravomocemi tehdejší premiéři</th>
+        </tr>
+        <tr>
+          <th>1999</th>
+          <th>2003</th>
+          <th rowspan="2">Rudolf Schuster</th>
+          <th></th>
+        </tr>
       </tbody>
 
       </tfoot>
